--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "compose-function": "^3.0.3",
     "date-fns": "^2.29.3",
     "framer-motion": "^8.5.5",
-    "next": "13.3.1-canary.4",
+    "next": "13.3.1",
     "react": "18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
