--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "wal-manager",
   "version": "2.0.0",
   "private": true,
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": "please-use-yarn",
+    "yarn": ">= 1.22.0"
+  },
   "scripts": {
     "build": "next build",
     "dev": "next dev",
