--- a/package.json
+++ b/package.json
@@ -16,23 +16,24 @@
     "prepare": "husky install",
     "prettier": "prettier --write ./src",
     "start": "next start",
-    "supabase": "supabase"
+    "supabase": "supabase",
+    "supabase:migration": "supabase db diff -f",
+    "supabase:reset": "supabase db reset"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.7.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.1.1",
     "@supabase/auth-helpers-nextjs": "^0.6.1",
     "@supabase/supabase-js": "^2.24.0",
     "@tanstack/react-query": "^4.29.12",
     "@tanstack/react-table": "^8.9.2",
     "chakra-react-select": "^4.6.0",
-    "compose-function": "^3.0.3",
     "date-fns": "^2.30.0",
     "framer-motion": "^8.5.5",
     "next": "13.4.5",
+    "next-translate": "^2.5.2",
     "react": "18.2.0",
     "react-datepicker": "^4.13.0",
     "react-dom": "18.2.0",
@@ -42,7 +43,6 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^7.0.0",
-    "@types/compose-function": "^0.0.30",
     "@types/node": "18.15.11",
     "@types/react": "18.2.11",
     "@types/react-datepicker": "^4.11.2",
@@ -53,9 +53,9 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
+    "next-translate-plugin": "^2.5.2",
     "prettier": "^2.8.8",
     "server-only": "^0.0.1",
     "supabase": "^1.64.8",
